Outsourcing strings values, clean code, and delete waste methods and variables

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,38 @@
     <string name="tab_text_3">DOCS</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="waiting">Espera un moment..</string>
+    <string name="view_in_map">Veure al mapa</string>
+    <string name="username">Username</string>
+    <string name="new_visit">Nova visita</string>
+    <string name="new_obra">Nova obra</string>
+    <string name="sign_in_with_google">Sign in With Google</string>
+    <string name="title_docs">DOCUMENTS</string>
+    <string name="title_obra_item">Titol d\'actuació</string>
+    <string name="adress_obra_item">Adreça</string>
+    <string name="author_obra_item">Ramon</string>
+    <string name="ref_obra_item">REF2020</string>
+    <string name="title_visit_item">Visita x</string>
+    <string name="description_visit_item">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam (...)</string>
+    <string name="date_visit_item">20-11-2020</string>
+    <string name="title_obra_to_new_visit">Titol</string>
+    <string name="name_new_visit">Nom de la visita</string>
+    <string name="author_new_visit">Nom del responsable</string>
+    <string name="timer_audio_recording">00:00</string>
+    <string name="date_new_visit">Data</string>
+    <string name="time_new_visit">Hora</string>
+    <string name="descripcio_new_visit">Descripció de l\'obra</string>
+    <string name="button_save_new_visit">SAVE DATA</string>
+    <string name="author_obra">DIRECCIÓ D\'OBRA</string>
+    <string name="autor_obra_text">Ramon</string>
+    <string name="ref_obra_text">REF2202</string>
+    <string name="ref_obra">REFERÈNCIA</string>
+    <string name="state_obra">ESTAT</string>
+    <string name="state_obra_text">EN CURS</string>
+    <string name="type_permision_obra">TIP. PERMÍS</string>
+    <string name="type_permision_obra_text">OBRA MAJOR</string>
+    <string name="extension_obra">PRÒRROGA</string>
+    <string name="extension_obra_text">30 dies</string>
+    <string name="date_start_obra">00-00-00</string>
+    <string name="date_end_obra">00-00-00</string>
 </resources>
